Remove unnecessary collector usage